# lib3mf

./: CMakeLists.txt  conanfile.txt
Bindings/Python/: Lib3MF.py
Include/Common/Platform/: NMR_ImportStream_Compressed.h
New folder/: CMakeLists.txt  README.en.md
New folder/Include/Common/OPC/: NMR_OpcPackageReader.h
New folder/Include/Common/Platform/: NMR_ExportStream_ZIP.h  NMR_ImportStream_ZIP.h
New folder/Source/: CMakeLists.txt
New folder/Source/3mf/: lib3mf_abi.hpp  lib3mf_implicit.hpp  lib3mf_interfaceexception.hpp  lib3mf_interfaces.hpp  lib3mf_interfacewrapper.cpp
New folder/Source/Common/Platform/: NMR_PortableZIPWriterEntry.cpp
Source/: CMakeLists.txt
Source/API/: lib3mf_beamlattice.cpp
Source/Common/: NMR_StringUtils.cpp
Source/Common/MeshImport/: NMR_MeshImporter_STL.cpp
Source/Common/OPC/: NMR_OpcPackageReader.cpp
Source/Common/Platform/: NMR_XmlReader_Native.cpp
Source/Implementation/: lib3mf_interfaceexception.cpp  lib3mf_interfacejournal.cpp  lib3mf_interfacejournal.hpp  lib3mf_interfaces.hpp
Source/Model/Reader/: NMR_ModelReader_3MF.cpp
